--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -102,25 +102,28 @@
 
       <li class="nav-item m-3 dropdown bold-link " >
         <% if user_signed_in? %>
-
           <% if mobile_device == "mobile" %>
-            <a class="nav-link dropdown-toggle" role="button" aria-haspopup="true" data-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle connexion-link" style="color: white;" id="navbarDropdownMenuLink" role="button" aria-haspopup="true" data-toggle="dropdown" aria-expanded="false">
               Mon compte
             </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <%= link_to  "Mon compte", user_path(current_user), class:"dropdown-item text-primary"%>
               <%= link_to  "Déconnexion", destroy_user_session_path, method: :delete, class:"dropdown-item text-primary"%>
+              <% if current_user.admin?(current_user) %>
+                <%= link_to  "Admin", admin_root_path, class:"dropdown-item text-primary"%>
+              <% end %>
+
             </div>
           <% else %>
-            <a class="nav-link dropdown-toggle" href="/companies/new" id="navbarDropdownMenuLink" role="button" aria-haspopup="true" aria-expanded="false">
-              Mon compte
-            </a>
+            <%= link_to "Mon compte", user_path(current_user), class: "nav-link dropdown-toggle", id:"navbarDropdownMenuLink", role:"button", ariahaspopup: true, ariaexpanded: false %>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
               <%= link_to  "Mon compte", user_path(current_user), class:"dropdown-item text-primary"%>
               <%= link_to  "Déconnexion", destroy_user_session_path, method: :delete, class:"dropdown-item text-primary"%>
+              <% if current_user.admin?(current_user) %>
+                <%= link_to  "Admin", admin_root_path, class:"dropdown-item text-primary"%>
+              <% end %>
             </div>
           <% end %>
-
         <% else %>
           <% if mobile_device == "mobile" %>
             <%= link_to "Connexion", user_session_path, class:"nav-link text-light-gray" %>
