add validation to telehone and add confirmation mail on sign-up

--- a/app/views/companies_mailer/creation_confirmation.html.erb
+++ b/app/views/companies_mailer/creation_confirmation.html.erb
@@ -10,7 +10,7 @@ Date limite d'envoi du formulaire : 31 décembre 2018.</p>
 
 <p>Notre équipe se tient à votre disposition pour vous aider dans votre candidature.</p>
 
-<p>Cliquez sur le lien ci-dessous pour activer votre compte : <%= link_to "Activation du compte", "http://www.defi-zero-dechet-pro.com/users/sign_in" %></p>
+<p>Cliquez sur le lien ci-dessous pour activer votre compte : <%= link_to t('.action'), confirmation_url(@resource, confirmation_token: @token) %></p>
 
 <p>Écologiquement, l'équipe Défi.</p>
 <%= email_image_tag("logo.jpg") %>
