--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -78,6 +78,14 @@
       <div class="col-12 col-sm-6 col-lg-3 p-1">
         <%= link_to "Suprimer mon compte", unknown_user_path(@user), method: :patch, data: { confirm: "Êtes-vous sûr ?" }, class:"btn btn-outline-danger bold" %>
       </div>
-
     </div>
   </div>
+  <div class="alert alert-dark mb-0" role="alert">
+    En poursuivant votre navigation sur ce site, vous acceptez l’utilisation de cookies pour vous proposer une navigation plus fluide. Pour en savoir plus, consultez notre <%= link_to "Politique de confidentialité", politique_path, class:"cool-link" %>
+    <button type="button" class="btn btn-primary ml-4" data-dismiss="alert" aria-label="Close">OK</button>
+    <%= link_to "Refuser", destroy_cookies_path(current_user), class:"btn btn-outline-danger", data: { confirm: "Vous ne pourrez pas rester connecté si vous refusez les cookies" } %>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+
