petit cookies alert

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -80,7 +80,7 @@
       </div>
     </div>
   </div>
-  <div class="alert alert-dark mb-0 text-center" role="alert">
+  <div class="alert alert-dark mb-0 text-center minus" role="alert">
     En poursuivant votre navigation sur ce site, vous acceptez l’utilisation de cookies pour vous proposer une navigation plus fluide. Pour en savoir plus, consultez notre <%= link_to "Politique de confidentialité", politique_path, class:"cool-link" %>
     <button type="button" class="btn btn-primary ml-4" data-dismiss="alert" aria-label="Close">OK</button>
     <%= link_to "Refuser", destroy_cookies_path(current_user), class:"btn btn-outline-danger", data: { confirm: "Vous ne pourrez pas rester connecté si vous refusez les cookies" } %>
