--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -16,4 +16,4 @@ Date limite d'envoi du formulaire : 31 décembre 2018.</p>
 <p><%= link_to t('.action'), confirmation_url(@resource, confirmation_token: @token) %></p>
 
 <p>Écologiquement, l'équipe Défi.</p>
-<%= devise_image_tag("logo.jpg") %>
+<%= devise_image_tag("logo.jpg", alt:"logo") %>
