--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,4 @@
   <div class="bg-white container-padding my-5">
-      <h3>Référent·e</h3>
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
         <%= f.error_notification %>
           <div class="row">
@@ -8,8 +7,8 @@
                 <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
               <% end %>
               <div class="col-12 ml-3 mb-4">
-                <h3>Mot de passe</h3>
-                <%= f.input :password,
+                <h3>Changer mon mot de passe</h3>
+                <%= f.input :password, label: "Nouveau mot de passe",
                             required: false,
                             input_html: { autocomplete: "new-password" } %>
               </div>
