--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -21,14 +21,13 @@
     <%= favicon_link_tag 'favicon.png' %>
   </head>
   <body>
-      <div class="container bg-white">
-        <div class="d-flex justify-content-center">
-          <%= link_to image_tag("logo.jpg", width: 200, class: "text-center"), root_path  %>
-
-        </div>
-        <%= yield %>
+    <%= render 'shared/flashes' %>
+    <div class="container bg-white">
+      <div class="d-flex justify-content-center">
+        <%= link_to image_tag("logo.jpg", width: 200, class: "text-center"), root_path %>
       </div>
-
+      <%= yield %>
+    </div>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
   </body>
