--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -137,12 +137,12 @@
                   <%= f.text_field :email, :placeholder => "Email", class: "form-control" %>
                 </div>
                 <div class="form-group ">
-                  <%= f.password_field :password, :placeholder => "Password", class: "form-control"  %>
+                  <%= f.password_field :password, :placeholder => "Mot de passe", class: "form-control"  %>
                 </div>
                 <div class="checkbox d-flex align-items-center">
-                  <%= f.check_box :remember_me %><%= f.label :remember_me %>
+                  <%= f.check_box :remember_me, class:"mr-2" %><%= f.label "se souvenir de moi"%>
                 </div>
-                <%= f.submit 'Login', class: "btn btn-primary" %>
+                <%= f.submit 'Connexion', class: "btn btn-primary bold" %>
               <% end %>
             </div>
           <% end %>
