--- a/app/views/shared/_navbar_connected.html.erb
+++ b/app/views/shared/_navbar_connected.html.erb
@@ -109,19 +109,19 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <%= link_to  "Profil", user_path(current_user), class:"dropdown-item text-primary"%>
-              <%= link_to  "Déconnexion", destroy_user_session_path, method: :delete, class:"dropdown-item text-primary"%>
               <% if current_user.admin?(current_user) %>
                 <%= link_to  "Admin", admin_root_path, class:"dropdown-item text-primary"%>
               <% end %>
+              <%= link_to  "Déconnexion", destroy_user_session_path, method: :delete, class:"dropdown-item text-primary"%>
             </div>
           <% else %>
             <%= link_to "Mon compte", user_path(current_user), class: "nav-link dropdown-toggle", id:"navbarDropdownMenuLink", role:"button", ariahaspopup: true, ariaexpanded: false %>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
               <%= link_to  "Profil", user_path(current_user), class:"dropdown-item text-primary"%>
-              <%= link_to  "Déconnexion", destroy_user_session_path, method: :delete, class:"dropdown-item text-primary"%>
               <% if current_user.admin?(current_user) %>
                 <%= link_to  "Admin", admin_root_path, class:"dropdown-item text-primary"%>
               <% end %>
+              <%= link_to  "Déconnexion", destroy_user_session_path, method: :delete, class:"dropdown-item text-primary"%>
             </div>
           <% end %>
         <% else %>
@@ -153,12 +153,12 @@
                   <%= f.text_field :email, :placeholder => "Email", class: "form-control" %>
                 </div>
                 <div class="form-group ">
-                  <%= f.password_field :password, :placeholder => "Password", class: "form-control"  %>
+                  <%= f.password_field :password, :placeholder => "Mot de passe", class: "form-control"  %>
                 </div>
                 <div class="checkbox d-flex align-items-center">
-                  <%= f.check_box :remember_me %><%= f.label :remember_me %>
+                  <%= f.check_box :remember_me, class:"mr-2" %><%= f.label "se souvenir de moi"%>
                 </div>
-                <%= f.submit 'Login', class: "btn btn-primary" %>
+                <%= f.submit 'Connexion', class: "btn btn-primary bold" %>
               <% end %>
             </div>
           <% end %>
