--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -61,9 +61,9 @@
 
 
     <h2 class="mt-0 text-center">Réunion d’informations pour les structures :</h2>
-    <h2 class="text-center mb-3"><strong>6 déc. 2018 - 10h-12h - </strong><b class="text-decoration-none"><%= link_to "Athénée municipal de Bordeaux", "https://www.google.fr/maps/place/Ath%C3%A9n%C3%A9e+Municipal/@44.8408871,-0.5812093,14z/data=!4m5!3m4!1s0xd5527db54fa1269:0x927f5e7ea3fbca9!8m2!3d44.8398049!4d-0.577148?hl=fr", target: :blank%></b></h2>
+    <h2 class="text-center mb-3"><b>Mercredi 19 décembre - 18h30-20h au Buro des possibles</b></h2>
     <p class="d-flex justify-content-center mb-5">
-      <%= link_to "Je m'inscris", inscription_path, class:"btn btn-primary text-white bold"  %>
+      <%= link_to "Je m'inscris", "https://goo.gl/forms/tSh1tvnjiEcB6ttt2", class:"btn btn-primary text-white bold"  %>
     </p>
 
     <hr/>
