forgot the target blank

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -63,7 +63,7 @@
     <h2 class="mt-0 text-center">Réunion d’informations pour les structures :</h2>
     <h2 class="text-center mb-3"><b>Mercredi 19 décembre - 18h30-20h au Buro des possibles</b></h2>
     <p class="d-flex justify-content-center mb-5">
-      <%= link_to "Je m'inscris", "https://goo.gl/forms/tSh1tvnjiEcB6ttt2", class:"btn btn-primary text-white bold"  %>
+      <%= link_to "Je m'inscris", "https://goo.gl/forms/tSh1tvnjiEcB6ttt2", class:"btn btn-primary text-white bold", target: :blank  %>
     </p>
 
     <hr/>
