interverti 2 lignes dans la home

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -46,11 +46,11 @@
 
     <hr/>
 
-    <div class="row">
-      <div class="col-10 offset-1">
-        <h2 class="green-bg-no-inline text-center mt-5"><strong>Inscrivez-vous</strong> entre le 19 nov. et le 31 déc. !</h2>
-      </div>
-    </div>
+    <h2 class="mt-5 mb-0 text-center">Réunion d’informations pour les structures :</h2>
+    <h2 class="text-center mb-3"><b>Mercredi 19 décembre - 18h30-20h au Buro des possibles</b></h2>
+    <p class="d-flex justify-content-center mb-0">
+      <%= link_to "Je m'inscris", "https://goo.gl/forms/tSh1tvnjiEcB6ttt2", class:"btn btn-primary text-white bold", target: :blank  %>
+    </p>
 
 
 
@@ -59,12 +59,11 @@
     </div>
 
 
-
-    <h2 class="mt-0 text-center">Réunion d’informations pour les structures :</h2>
-    <h2 class="text-center mb-3"><b>Mercredi 19 décembre - 18h30-20h au Buro des possibles</b></h2>
-    <p class="d-flex justify-content-center mb-5">
-      <%= link_to "Je m'inscris", "https://goo.gl/forms/tSh1tvnjiEcB6ttt2", class:"btn btn-primary text-white bold", target: :blank  %>
-    </p>
+    <div class="row mt-0 mb-5">
+      <div class="col-10 offset-1">
+        <h2 class="green-bg-no-inline text-center mt-0"><strong>Inscrivez-vous</strong> entre le 19 nov. et le 31 déc. !</h2>
+      </div>
+    </div>
 
     <hr/>
 
