--- a/app/views/collects/new.html.erb
+++ b/app/views/collects/new.html.erb
@@ -2,12 +2,13 @@
 
   <%= simple_form_for @collect do |f| %>
 
-    <%= f.input :bin_id, collection: @bins %>
-    <%= f.input :start_at %>
-    <%= f.input :end_at %>
-    <%= f.input :filled_rate %>
-    <%= f.input :comment %>
-    <%= f.button :submit %>
+    <%= f.input :bin_id, collection: @bins, label: "Choisir un bac" %>
+    <p>Période du relevé : début et fin</p>
+    <%= f.input :start_at, label: false %>
+    <%= f.input :end_at, label: false %>
+    <%= f.input :filled_rate, collection: [["0%", 0], ["25%", 25], ["50%", 50], ["75%", 75], ["100%", 100], ["125%", 125], ["150%", 150]], label_method: :first, value_method: :second, label: "Taux de remplissage du bac" %>
+    <%= f.input :comment, label: "Commentaire" %>
+    <%= f.button :submit, "Enregistrer un relevé" %>
 
   <% end %>
 
