--- a/app/views/shared/_navbar_secondary_connected.html.erb
+++ b/app/views/shared/_navbar_secondary_connected.html.erb
@@ -1,5 +1,5 @@
 <span class="navbar-secondary" id="logo-navbar-secondary">
-  <%= link_to root_path do %>
+  <%= link_to tableau_de_bord_path do %>
     <%= image_tag 'logo.jpg', class:"logo-nav-secondary" %>
   <% end %>
 </span>
