--- a/app/views/bins/new.html.erb
+++ b/app/views/bins/new.html.erb
@@ -1,3 +1,8 @@
-<div class="container">
-    <%= render "bins/form", trash: @trash, trashes: @trashes, bin: @bin %>
+<div class="wrapper">
+  <div class="container">
+    <div class="container-soutenir">
+      <h1 class="header text-primary pt-5 text-center">Faire un relevé</h1>
+      <%= render "bins/form", trash: @trash, trashes: @trashes, bin: @bin %>
+    </div>
+  </div>
 </div>
