--- a/app/views/pages/tableau_de_bord.html.erb
+++ b/app/views/pages/tableau_de_bord.html.erb
@@ -1,4 +1,7 @@
-
-<div class="container">
-  <h1 class="mt-3">Tableau de bord</h1>
+<div class="wrapper">
+  <div class="container">
+    <div class="container-soutenir">
+      <h1 class="header text-primary pt-5 text-center">TABLEAU DE BORD</h1>
+    </div>
+  </div>
 </div>
