add mail for new user generated

--- a/app/stylesheets/components/_array.scss
+++ b/app/stylesheets/components/_array.scss
@@ -12,6 +12,9 @@ td {
   text-align: center;
 }
 
-.gray {
-  background-color: $gray;
+tbody:nth-child(even) {
+  background: #CCC;
+}
+tbody:nth-child(odd) {
+  background: #FFF
 }
