amélioré la mise en forme du collect index

--- a/app/stylesheets/components/_array.scss
+++ b/app/stylesheets/components/_array.scss
@@ -13,8 +13,8 @@ td {
 }
 
 tbody:nth-child(even) {
-  background: #CCC;
+  background: #FFF;
 }
 tbody:nth-child(odd) {
-  background: #FFF
+  background: #CCC
 }
