--- a/app/views/collects/index.html.erb
+++ b/app/views/collects/index.html.erb
@@ -3,18 +3,19 @@
     <div class="container-soutenir">
       <h1 class="header text-primary pt-5 text-center">DONNÉES</h1>
       <h2 class="green-bg mt-5">Déchets de fonctionnement de votre structure</h2>
-      <div class="d-flex justify-content-around mt-5">
-        <%= link_to "Réaliser votre diagnostic", new_trash_diagnostic_path, class:"btn btn-primary" %>
-        <%= link_to "Saisir un relevé", new_collect_path, class:"btn btn-primary" %>
-        <%= link_to "Ajouter un bac", new_bin_path, class:"btn btn-primary" %>
+      <div class="d-flex justify-content-around mt-4">
+        <%= link_to "Réaliser votre diagnostic", new_trash_diagnostic_path, class:"btn btn-primary bold" %>
+        <%= link_to "Saisir un relevé", new_collect_path, class:"btn btn-primary bold" %>
+        <%= link_to "Ajouter un bac", new_bin_path, class:"btn btn-primary bold" %>
       </div>
-      <table class="mt-5">
+      <table class="mt-4">
         <thead>
           <tr>
             <th> Type de bacs</th>
             <th> Début de période de relevée</th>
             <th> Fin de période de relevée</th>
             <th> Taux de remplissage</th>
+            <th>Commentaire</th>
             <th></th>
             <th></th>
           </tr>
@@ -22,9 +23,10 @@
         <% @collects.each do |collect| %>
         <tbody>
           <td  class="gray" ><%= collect.bin.name %></td>
-          <td><%= collect.start_at %></td>
-          <td  class="gray" ><%= collect.end_at %></td>
-          <td><%= collect.filled_rate %></td>
+          <td><%= collect.start_at.strftime("%d/%m/%y") %></td>
+          <td  class="gray" ><%= collect.end_at.strftime("%d/%m/%y") %></td>
+          <td><%= collect.filled_rate %>%</td>
+          <td><%= collect.comment %></td>
           <td  class="gray" ><%= link_to "Modifier", edit_collect_path(collect), class: "btn btn-primary" %></td>
           <td>
             <%= link_to "Supprimer", collect_path(collect),
@@ -37,7 +39,8 @@
         <% end %>
       </table>
       <h2 class="green-bg mt-5">Utilisateur·ice·s de votre structure</h2>
-      <table class="mt-5">
+      <p><%= link_to "Ajouter un compte", new_user_path, class:"btn btn-primary mt-4 bold" %></p>
+      <table class="mt-4">
         <thead>
           <tr>
             <th>Civilité</th>
@@ -59,8 +62,8 @@
         </tbody>
         <% end %>
       </table>
-      <%= link_to "Ajouter un compte", new_user_path %>
 
     </div>
   </div>
 </div>
+
