--- a/app/views/bins/new.html.erb
+++ b/app/views/bins/new.html.erb
@@ -1,8 +1,53 @@
 <div class="wrapper">
   <div class="container">
     <div class="container-soutenir">
-      <h1 class="header text-primary pt-5 text-center">Faire un relevé</h1>
-      <%= render "bins/form", trash: @trash, trashes: @trashes, bin: @bin %>
+      <h1 class="header text-primary pt-5 text-center">Gérer les bacs</h1>
+
+      <table class="mt-4">
+        <thead>
+          <tr>
+            <th> Type de bacs</th>
+            <th>Partagé</th>
+            <th> Volume (Litres)</th>
+            <th> Fréquence de collecte habituelle</th>
+            <th> Prestataire de collecte</th>
+            <th>Déchets collectés</th>
+            <th>Coût annuel</th>
+            <th></th>
+            <th></th>
+          </tr>
+        </thead>
+        <% @bins.each do |bin| %>
+        <tbody>
+          <td><%= bin.name %></td>
+          <td><%= bin.shared %></td>
+          <td><%= bin.volume %></td>
+          <td><%= bin.frequency_number %> <%= bin.frequency_periodicity %> <%= bin.frequency_day %> </td>
+          <td> <%= bin.collector %> </td>
+          <td><% bin.trashes.each do |trash| %>
+             <%= trash.name %>,
+          <% end %></td>
+          <td> <%= bin.cost %> </td>
+          <td><%= link_to "Modifier", edit_bin_path(bin), class: "btn btn-primary" %></td>
+          <td>
+            <%= link_to "Supprimer", bin_path(bin),
+                                    method: :delete,
+                                    class: "btn btn-danger",
+                                    data: { confirm: "Êtes-vous sûr ?"}
+            %>
+          </td>
+
+        </tbody>
+        <% end %>
+      </table>
+
+      <div class="d-flex justify-content-center my-4">
+        <span class='btn btn-primary bold add-bin'>Ajouter un bac</span>
+      </div>
+
+      <span class='add-bin-form'>
+        <%= render "bins/form", trash: @trash, trashes: @trashes, bin: @bin %>
+      </span>
     </div>
   </div>
 </div>
