redirection et marge

--- a/app/views/collects/index.html.erb
+++ b/app/views/collects/index.html.erb
@@ -43,7 +43,7 @@
       </table>
       <h2 class="green-bg mt-5">Utilisateur·ice·s de votre structure</h2>
       <p><%= link_to "Ajouter un compte", new_user_path, class:"btn btn-primary mt-4 bold" %></p>
-      <table class="mt-4">
+      <table class="mt-4 mb-5">
         <thead>
           <tr>
             <th>Civilité</th>
