--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -24,6 +24,8 @@
       <div class="col-12 col-md-6">
         <%= f.input :email, placeholder: 'Email*', label: false  %>
       </div>
+
+      <%= f.input :created_by_referent, as: :boolean %>
     </div>
     <div class="d-flex justify-content-center">
       <%= f.button :submit, "Créer un compte", class: 'btn btn-primary text-white bold mr-3 mb-3' %>
