confirmation utilisateur avec changmeent de mot de passe  nickel

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,8 @@
-<p><%= t('.greeting', recipient: @resource.email) %></p>
+<p>Bonjour <%= @resource.civility %> <%= @resource.last_name.upcase %></p>
 
-<p><%= t('.instruction') %></p>
+<p>Cliquez sur le lien ci-dessous pour configurer votre mot de passe :</p>
 
-<p><%= link_to t('.action'), edit_password_url(@resource, reset_password_token: @token) %></p>
+<p><%= link_to "Configurer mon mot de passe", edit_password_url(@resource, reset_password_token: @token) %></p>
 
-<p><%= t('.instruction_2') %></p>
-<p><%= t('.instruction_3') %></p>
+<p>Écologiquement, l'équipe Défi.</p>
+<%= devise_image_tag("logo.jpg", alt:"logo") %>
