--- a/app/views/devise/mailer/reset_password_instructions.text.erb
+++ b/app/views/devise/mailer/reset_password_instructions.text.erb
@@ -1,8 +1,7 @@
-<%= t('.greeting', recipient: @resource.email) %>
+Bonjour <%= @resource.civility %> <%= @resource.last_name.upcase %>
 
-<%= t('.instruction') %>
+Cliquez sur le lien ci-dessous afin de configurer votre mot de passe pour le Défi Zéro Déchet des Pros:
 
-<%= link_to t('.action'), edit_password_url(@resource, reset_password_token: @token) %>
+<%= link_to "Configurer mon mot de passe", edit_password_url(@resource, reset_password_token: @token) %>
 
-<%= t('.instruction_2') %>
-<%= t('.instruction_3') %>
+Écologiquement, l'équipe Défi.
