--- a/app/views/shared/_navbar_connected.html.erb
+++ b/app/views/shared/_navbar_connected.html.erb
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-expand-lg justify-content-end position-fixed" id="nav_bar">
   <div class="navbar-logo align-items-center justify-content-center" id="nav_logo">
-    <%= link_to tableau_de_bord_path, class:"navbar-brand" do %>
+    <%= link_to charts_path, class:"navbar-brand" do %>
         <%= image_tag 'logo.jpg', id:"logo" %>
     <% end %>
   </div>
@@ -11,7 +11,7 @@
   <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <%= link_to tableau_de_bord_path, class:"navbar-brand home-nav-link ml-3 m-lg-none" do %>
+        <%= link_to charts_path, class:"navbar-brand home-nav-link ml-3 m-lg-none" do %>
           <%= inline_svg "Accueil.svg", width: 20, class:"home" %>
         <% end %>
       </li>
