--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -1,7 +1,10 @@
+<% require 'chartkick' %>
+
 <div class="wrapper">
   <div class="container">
     <div class="container-soutenir">
       <h1 class="header text-primary pt-5 text-center">TABLEAU DE BORD</h1>
+      <%= line_chart User.group_by_day(:created_at).count %>
     </div>
   </div>
 </div>
